Fixed queries in favorites Add left spacing to subheader
git-svn-id: file:///home/gallir/meneame/svn/src@2455 cbe1a1ec-7179-4919-8e32-4551e8279a00

--- a/branches/version3/www/css/es/mnm62.css
+++ b/branches/version3/www/css/es/mnm62.css
@@ -366,7 +366,7 @@ border-bottom: solid 1px #FFEDC6;
 background-color: #FFEDC6;
 height: 40px !important;
 list-style-type: none;
-padding-left: 15px;
+padding-left: 35px;
 }
 
 .subheader li{
